2009-11-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.html: Update information about getting child processes
	to indicate that win32 isn't an available option anymore.

2009-11-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.html: Add information about finding MonkeyWrench.xml
	on windows (we now look in MyDocuments too).

2009-09-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.html: Add note about not being able to auto-detect
	macs.

2009-09-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.html: Added information about ChildProcessAlgorithm
	and Platform.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLaneHelp.html: Start writing some help for the EditLane page.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* index.html: We're called MonkeyWrench now.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.html: Updated information about SchedulerAccount
	and SchedulerPassword.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.html: Added information about LockingAlgorithm.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.html: Added information about RetryConnectionTimeout.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Source.html:
	* Configuration.html: Updated with new documentation for new
	project.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* index.html:
	* Configuration.html: Added documentation for the MonkeyWrench.xml
	 format
