@@ -37,6 +37,7 @@
         &lt;LockingAlgorithm /&gt;
         &lt;SchedulerAccount /&gt;
         &lt;SchedulerPassowrd /&gt;
+        &lt;AllowedCommitReporterIPs /&gt;
     &lt;/Configuration&gt;
 &lt;/MonkeyWrench&gt;
 </pre>
@@ -91,6 +92,7 @@
     <li>pgrep</li>
     <li>ps</li>
     </ul>
+    <h3>AllowedCommitReporterIPs</h3>The IPs that can report commits to ReportCommit.aspx or ReportGitHubCommit.aspx. Comma separated list of globs to accept.
     <h2>
         Sample configuration</h2>
     This is a sample configuration file for a buildbot:
